--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,3 +4,7 @@
 users:
   type: rest
   resource: App\Controller\UsersController
+
+articles:
+  type: rest
+  resource: App\Controller\ArticlesController
