--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -4,7 +4,14 @@
 users:
   type: rest
   resource: App\Controller\UsersController
+  prefix: /api
 
 articles:
   type: rest
   resource: App\Controller\ArticlesController
+  prefix: /api
+
+app.swagger_ui:
+  path: /api/doc
+  methods: GET
+  defaults: { _controller: nelmio_api_doc.controller.swagger_ui }
