--- a/.env.dist
+++ b/.env.dist
@@ -15,3 +15,5 @@ APP_SECRET=fb8a74023c438126d1c69eea85097316
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:root@database:3306/mydatabase
 ###< doctrine/doctrine-bundle ###
+
+SYMFONY_DEPRECATIONS_HELPER=disabled
