--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@
 /vendor/
 /docker/
 ###< symfony/framework-bundle ###
+
+###> symfony/phpunit-bridge ###
+.phpunit
+/phpunit.xml
+###< symfony/phpunit-bridge ###
