--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,10 @@
     "require-dev": {
         "doctrine/data-fixtures": "^1.3",
         "hautelook/alice-bundle": "^2.0",
+        "symfony/browser-kit": "^4.1",
         "symfony/dotenv": "^4.1",
         "symfony/maker-bundle": "^1.6",
+        "symfony/phpunit-bridge": "^4.1",
         "symfony/profiler-pack": "^1.0"
     },
     "config": {
