--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "symfony/security-bundle": "^4.1",
         "symfony/serializer-pack": "^1.0",
         "symfony/translation": "^4.1",
+        "symfony/twig-bundle": "^4.1",
         "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1"
     },
